--- a/Relvise/css/style.css
+++ b/Relvise/css/style.css
@@ -36,16 +36,74 @@ ul li{list-style: none;}
 img{vertical-align: top;}
 
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
-/*--------------------*/
 
-body{
-	height: 100%;
-	line-height: 1;
+/*-------------------------------------------------------------------------------------*/
+
+body{	
 	font-size: 16px;
-	color: black;
+	color: #252B42;
+	font-weight: 500;
+	font-family: Montserrat;
+	font-size: 14px;
 }
+
+/*-------------------------------------------------------------------------------------*/
 
 .wrapper{
 	min-height: 100%;
 	overflow: hidden;
+}
+
+/*-------------------------------------------------------------------------------------*/
+
+._container{
+	max-width: 1046px;
+	margin: 0 auto;
+}
+
+/*-------------------------------------------------------------------------------------*/
+
+.header {
+	position: absolute;
+	width: 100%;
+	left: 0;
+	top: 0;
+	z-index: 50;
+}
+.header__container {
+	display: flex;
+	min-height: 104px;
+	align-items: center;
+}
+
+.header__logo {		
+	font-size: 24px;
+	font-style: normal;
+	font-weight: 700;
+	line-height: 32px;
+	letter-spacing: 0.10000000149011612px;
+	text-align: left;	
+	color: inherit;
+}
+.header__menu {
+	margin-left: 132px;
+}
+.menu {}
+
+.menu_list {
+	display: flex;
+}
+.menu__item {}
+
+.menu__item:not(:last-child){
+	margin-right: 21px;
+}
+
+.menu__link {
+	font-size: 14px;
+	font-weight: 600;
+	line-height: 171%;
+	letter-spacing: 0.20000000298023224px;
+	text-align: center;
+	color: #737373;
 }
