--- a/Relvise/css/style.css
+++ b/Relvise/css/style.css
@@ -138,6 +138,7 @@ body{
 	display: flex;
 	flex-wrap: wrap;
 }
+
 .menu__item {}
 
 .menu__item:not(:last-child){
@@ -163,23 +164,40 @@ body{
 
 
 
-/*-------------------------------------------------------------------------------------*/
+/*--PAGE-------------------------------------------------------------------------------*/
 
 .page {
 	flex: 1 1 auto;
 }
 
 .page__mainblock {}
+
+
+.page__services {
+	position: relative;
+	z-index: 2;
+	margin-top: -111px;
+}
+
+/*----MAIN-BLOCK---------------------------------------------------------------------*/
+
 .mainblock {
 	position: relative;
 }
 .mainblock__container {}
 ._container {}
+
 .mainblock__body {
 	padding:184px 0 191px 0;
 	position: relative;
 	z-index: 2;
 	max-width: 509px;
+}
+
+@media (max-width: 992px){
+	.mainblock__body{
+		padding:120px 0 191px 0;
+	}
 }
 
 .mainblock__body > *:not(:last-child){
@@ -192,16 +210,68 @@ body{
 	line-height: 138%;
 	letter-spacing: 0.2px;
 }
+
+@media (max-width: 479px){
+	.mainblock__title {
+		font-size: 42px;
+	}
+}
+
 .mainblock__text {
 	font-weight: 500;
 	font-size: 20px;
 	line-height: 150%;
 	letter-spacing: 0.2px;
 	color: #737373;
+	max-width: 376px;
 }
-.mainblock__buttons {}
-.mainblock__button {}
-.mainblock__button_border {}
+
+@media (max-width: 479px){
+	.mainblock__text{
+		color: #4d4d4d;
+	}
+}
+
+.mainblock__buttons {
+	display: flex;
+	flex-wrap: wrap;
+	margin: -10px 0;
+}
+.mainblock__button {	
+	border-radius: 37px;
+	display: flex;	
+	min-height: 48px;
+	align-items: center;
+	justify-content: center;
+	padding: 5px 36px;
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 150%;
+	text-align: center;
+	letter-spacing: 0.2px;
+	margin: 10px 0;	
+}
+
+@media (max-width: 479px){
+	.mainblock__button{
+		flex: 1 1 100%;
+	}
+}
+
+@media (min-width: 479px){
+	.mainblock__button:not(:last-child){
+		margin-right: 10px;
+	}
+}
+.mainblock__button_orange {
+	background: #FF7B47;
+	color: #FFFFFF;	
+}
+.mainblock__button_border {
+	color: #0D5C63;
+	border: 1px solid #0D5C63;	
+}
+
 .mainblock__image{
 	position: absolute;
 	width: 100%;
@@ -210,8 +280,83 @@ body{
 	left: 0;
 }
 
+@media (max-width: 1300px){
+	.mainblock__image img{
+		object-position: right;
+	}
+}
+
+@media (max-width: 992px){
+	.mainblock__image {
+		opacity: 0.5;
+	}
+}
 /*-------------------------------------------------------------------------------------*/
 
-.footer {
-	
+
+.services {}
+.services__container {}
+.services__body {}
+
+@media (min-width: 670px){
+	.services__body {
+		display: flex;
+		flex-wrap: wrap;
+		margin: 0 -15px -30px;		
+	}
 }
+
+.services__column {	
+	flex: 0 1 33.333%;
+	margin-bottom: 30px;
+}
+
+@media (min-width: 670px){
+	.services__column{
+		padding: 0 15px;
+	}
+}
+
+@media (max-width: 992px){
+	.services__column {
+		flex: 0 1 50%;		
+	}
+}
+
+.services__item {
+	box-shadow: 0px 13px 19px rgba(0, 0, 0, 0.08);
+	background: #FFFFFF;
+	padding: 35px 40px;
+	height: 100%;
+}
+
+.item-service > *:not(:last-child){
+	margin-bottom: 10px;
+}
+
+.item-service_green{
+	background: #0D5C63;
+}
+
+.item-service__icon {}
+.item-service__title {
+	color: #252B42;
+	font-weight: bold;
+	font-size: 24px;
+	line-height: 133%;
+	letter-spacing: 0.1px;	
+}
+.item-service__text {
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 143%;
+	letter-spacing: 0.2px;
+	color: #737373;
+}
+
+
+
+
+/*-------------------------------------------------------------------------------------*/
+
+.footer {}
