--- a/Relvise/css/style.css
+++ b/Relvise/css/style.css
@@ -321,6 +321,9 @@ body{
 	.services__column {
 		flex: 0 1 50%;		
 	}
+	.services__column:last-child{
+		flex: 1 1 100%;
+	}
 }
 
 .services__item {
@@ -330,15 +333,31 @@ body{
 	height: 100%;
 }
 
+@media (max-width: 479px){
+	.services__item {
+		padding: 20px 30px;
+	}
+}
+
 .item-service > *:not(:last-child){
 	margin-bottom: 10px;
 }
 
 .item-service_green{
-	background: #0D5C63;
+	background: #0D5C63;	
 }
 
+.item-service_green .item-service__title{
+	color: white;
+}
+
+.item-service_green .item-service__text{
+	color: white;
+}
+
+
 .item-service__icon {}
+
 .item-service__title {
 	color: #252B42;
 	font-weight: bold;
