--- a/Relvise/css/style.css
+++ b/Relvise/css/style.css
@@ -183,9 +183,9 @@ body{
 	margin-top: -111px;
 }
 
-.page__advantages {
+.page__advantages {}
 
-}
+.page__practice {}
 
 
 
@@ -530,6 +530,107 @@ body{
 	color: #737373;
 }
 
+
+
+/*----PRACTICE------------------------------------------------------------------------*/
+
+
+.practice {
+	padding: 125px 0 80px 0;
+}
+
+@media (max-width: 993px){
+	.practice {
+		padding: 40px 0 80px 0;
+	}
+}
+
+@media (max-width: 767px){
+	.practice {
+		padding: 0 0 40px 0;
+	}
+}
+
+.practice__container {}
+
+.practice__header {
+	margin-bottom: 45px;
+}
+
+@media (max-width: 767px){
+	.practice__header {
+		margin-bottom: 25px;
+	}
+}
+
+.practice__body {
+	margin-bottom: 0 -20px -30px;
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.practice__column {
+	padding: 0 20px;
+	margin-bottom: 30px;
+	flex: 0 1 25%;
+}
+
+@media (max-width: 1040px){
+	.practice__column {		
+		flex: 0 1 50%;
+	}
+}
+
+@media (max-width: 630px){
+	.practice__column {		
+		flex: 0 1 100%;
+	}
+}
+
+.practice__item {}
+
+.item-practice {
+	background-color: #FFFFFF;
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+}
+
+.item-practice__content{
+	padding: 30px;
+	flex: 1 1 auto;
+}
+
+.item-practice__link {		
+	color: inherit;	
+	display: inline-block;
+}
+
+.item-practice__link:hover{
+	text-decoration: underline;
+}
+
+.item-practice__link:not(:last-child){
+	margin-bottom: 15px;
+}
+
+.item-practice__title {
+	font-weight: bold;
+	font-size: 16px;
+	line-height: 150%;
+	letter-spacing: 0.1px;	
+}
+.item-practice__text {
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 143%;
+	letter-spacing: 0.2px;
+	color: #737373;	
+}
+.item-practice__image {
+	display: block;
+	padding: 0px 0px 60% 0px;
+}
 
 
 
