--- a/css/style.css
+++ b/css/style.css
@@ -187,6 +187,8 @@ body{
 
 .page__practice {}
 
+.page__whoweare {}
+
 
 
 
@@ -633,6 +635,99 @@ body{
 }
 
 
+/*----WHO WE ARE------------------------------------------------------------------------*/
+
+.whoweare {
+	padding: 100px 0;
+}
+.whoweare__container {}
+.whoweare__header {
+	margin-bottom: 100px;
+}
+.whoweare__body {
+	display: flex;
+}
+.whoweare__video {
+	flex: 0 0 57%;
+	position: relative;
+	padding-bottom: 42.26%;
+}
+.whoweare__video iframe{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	object-fit: cover;
+}
+
+.whoweare__content {
+	flex: 1 1 auto;
+	padding: 20px 0 0 120px;
+}
+
+.whoweare__title {
+	font-weight: bold;
+	font-size: 40px;
+	line-height: 142%;
+	letter-spacing: 0.2px;
+	color: #252B42;
+}
+
+.whoweare__title:not(:last-child){
+	margin-bottom: 10px;
+}
+
+.whoweare__text {
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 143%;
+	letter-spacing: 0.2px;
+	color: #737373;
+}
+
+.whoweare__items {
+	margin-top: 50px;
+}
+.whoweare__item {}
+
+.whoweare__item:not(:last-child){
+	margin-bottom: 30px;
+}
+
+.item-whoweare {
+	display: flex;
+}
+
+.item-whoweare__icon {
+	flex: 0 0 32px;
+}
+
+.item-whoweare__body {
+	flex: 1 1 auto;
+	padding-left: 20px;
+}
+
+
+.item-whoweare__title {
+	font-weight: bold;
+	font-size: 16px;
+	line-height: 150%;
+	letter-spacing: 0.1px;
+	color: #252B42;
+}
+
+.item-whoweare__title:not(:last-child){
+	padding-bottom: 5px;
+}
+
+.item-whoweare__text {
+	font-weight: 600;
+	font-size: 14px;
+	line-height: 171%x;
+	letter-spacing: 0.2px;
+	color: #737373;
+}
 
 
 
