--- a/css/style.css
+++ b/css/style.css
@@ -195,6 +195,8 @@ body{
 
 .page__subscribe {}
 
+.page__getintouch {}
+
 
 
 
@@ -944,6 +946,83 @@ body{
 		padding: 0 15px;
 	}
 }
+
+
+/*----GET IN TOUCH------------------------------------------------------------------------*/
+
+.getintouch {
+	background: #F3F3F3;	
+}
+
+.getintouch__container {}
+
+.getintouch__header {
+	padding: 80px 0;	
+}
+.getintouch__items {
+	display: flex;	
+	justify-content: center;
+	flex-wrap: wrap;		
+}
+
+.getintouch__item {
+	padding: 50px 0px;	
+	text-align: center;
+	background: #FFFFFF;	
+}
+
+.item-getintouch {}
+
+.item-getintouch__icon {		
+	align-items: center;	
+	height: 72px;	
+}
+
+.item-getintouch__emails {
+	margin: 15px 52px;	
+	display:flex;
+	flex-direction:column;		
+}
+
+.item-getintouch__email {		
+	font-weight: 600;
+	font-size: 14px;
+	line-height: 171%;
+	text-align: center;
+	letter-spacing: 0.2px;
+	color: #252B42;	
+}
+.item-getintouch__label {
+	font-weight: bold;
+	font-size: 16px;
+	line-height: 150%;	
+	letter-spacing: 0.1px;
+	color: #252B42;
+}
+
+.item-getintouch__label:not(:last-child){
+	margin-bottom: 15px;
+}
+
+
+.item-getintouch__button {
+	border: 1px solid #FF7B47;
+	border-radius: 5px;	
+	font-weight: 600;	
+	font-size: 14px;
+	line-height: 171%;	
+	letter-spacing: 0.2px;
+	color: #FF7B47;
+	display: flex;
+	min-height: 44px;
+	text-align: center;
+	justify-content: center;
+	align-items: center;
+	width: 160px;
+	margin: 0 auto;
+}
+
+
 
 
 
