--- a/css/style.css
+++ b/css/style.css
@@ -195,6 +195,8 @@ body{
 
 .page__subscribe {}
 
+.page__getintouch {}
+
 
 
 
@@ -945,6 +947,37 @@ body{
 	}
 }
 
+
+/*----GET IN TOUCH------------------------------------------------------------------------*/
+
+.getintouch {
+	padding: 80px 0 136px 0;
+}
+
+.getintouch__container {}
+
+.getintouch__header {
+	margin-bottom: 80px;
+}
+
+.getintouch__items {
+	display: flex;
+	align-items: center;
+}
+
+.getintouch__item {}
+
+.item-getintouch {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.item-getintouch__icon {}
+.item-getintouch__emails {}
+.item-getintouch__label {}
+.item-getintouch__button {}
 
 
 /*----FOOTER------------------------------------------------------------------------*/
