Add 'Footer' block

--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,9 @@ body{
 	color: #737373;
 }
 
+.menu__link:hover {
+	text-decoration: underline;
+}
 
 @media (max-width: 479px){
 	.menu__link {
@@ -198,6 +201,8 @@ body{
 .page__getintouch {}
 
 .page__contact {}
+
+.footer {}
 
 
 
@@ -318,8 +323,10 @@ body{
 	line-height: 150%;
 	text-align: center;
 	letter-spacing: 0.2px;
-	margin: 10px 0;	
+	margin: 10px 0;
+	transition: all 0.3s ease 0s;
 }
+
 
 @media (max-width: 479px){
 	.mainblock__button{
@@ -335,10 +342,22 @@ body{
 .mainblock__button_orange {
 	background: #FF7B47;
 	color: #FFFFFF;	
+	border: 1px solid #FF7B47;
 }
+
+.mainblock__button_orange:hover {
+	background-color:#fcd4c5;
+	color: #FF7B47;	
+}
+
 .mainblock__button_border {
 	color: #0D5C63;
 	border: 1px solid #0D5C63;	
+}
+
+.mainblock__button_border:hover {	
+	color: #FFFFFF;
+	background-color: #0D5C63;
 }
 
 .mainblock__image{
@@ -938,6 +957,11 @@ body{
 	letter-spacing: 0.2px;
 	color: #FFFFFF;
 	padding: 0 22.5px;
+	transition: all 0.3s ease 0s;
+}
+
+.subscribe__button:hover {
+	background: #f85717;	
 }
 
 @media (max-width: 810px){
@@ -1159,4 +1183,156 @@ body{
 
 /*----FOOTER------------------------------------------------------------------------*/
 
-.footer {}
+
+.footer__top {
+	background-color: #17213C;
+	padding: 35px 0;
+}
+
+.footer__main {}
+
+.footer__row {
+	display: flex;
+	margin: 0 -15px;
+	flex-wrap: wrap;
+}
+
+.footer__column {
+	padding: 15px 15px;
+	flex: 0 1 16.667%;		
+}
+
+.footer__column:last-child {
+	flex: 0 1 33.334%;
+}
+
+@media (max-width: 1006px) {
+	.footer__column {
+		flex: 0 1 25%;
+	}
+	.footer__column:last-child {
+		flex: 0 1 100%;
+	}
+}
+
+@media (max-width: 700px) {
+	.footer__column {
+		flex: 0 1 50%;
+	}	
+}
+
+
+
+.footer__label {
+	color: #FFFFFF;
+	font-weight: bold;
+	font-size: 16px;
+	line-height: 150%;
+	letter-spacing: 0.1px;
+	margin-bottom: 20px;
+}
+
+.footer__menu {}
+
+
+.menu-footer {}
+.menu-footer__list {}
+.menu-footer__item {}
+
+.menu-footer__item:not(:last-child) {
+	margin-bottom: 10px;
+}
+
+.menu-footer__link {
+	color: #FFFFFF;
+	font-weight: 600;
+	font-size: 14px;
+	line-height: 171%;
+	letter-spacing: 0.2px;
+}
+
+.menu-footer__link:hover {
+	text-decoration: underline;
+}
+
+.footer__contacts {}
+
+.contacts-footer {
+	display: flex;
+	flex-direction: column;
+}
+
+.contacts-footer__item {
+	padding-left: 34px;
+	display: flex;
+	align-items: center;
+	min-height: 30px;
+
+	font-weight: 600;
+	font-size: 14px;
+	line-height: 171%;
+	letter-spacing: 0.2px;
+	color: #FFFFFF;
+}
+
+.contacts-footer__item:hover {
+	text-decoration: underline;
+}
+
+.contacts-footer__item:not(:last-child) {
+	margin-bottom: 12px;
+}
+
+.contacts-footer__item_phone {
+	background: url(../img/footer/icons/01.svg) 0 0 no-repeat;
+}
+
+.contacts-footer__item_map {
+	background: url(../img/footer/icons/02.svg) 0 0 no-repeat;
+}
+
+.contacts-footer__item_email {
+	background: url(../img/footer/icons/03.svg) 0 0 no-repeat;
+}
+
+.footer__bottom {
+	padding: 25px 0;
+}
+
+.footer__container {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.footer__copy {
+	font-weight: 600;
+	font-size: 14px;
+	line-height: 171%;
+	letter-spacing: 0.2px;
+	color: #737373;	
+}
+
+@media (max-width: 767px) {
+	.footer__container {
+		flex-direction: column;
+	}
+	.footer__copy {
+		padding-bottom: 15px;
+		text-align: center;
+	}
+}
+
+.footer__social {}
+
+.social {
+	display: flex;
+	align-items: center;
+}
+
+.social__item {}
+
+.social__item:not(:last-child) {
+	margin-right: 20px;
+}
+
